--- a/views/ajuda.html
+++ b/views/ajuda.html
@@ -21,7 +21,7 @@
     <h2>📋 Regras</h2>
     <ul>
       <li>Não é permitido voltar para perguntas anteriores;</li>
-      <li>Cada resposta correta vale ponto dependendo da dificuldade da pergunta. Fáceis: 1, Médias: 2, Difíceis: 3;</li>
+      <li>A quantidade de pontos obtida e de acordo com o seu raciocínio rápido e lógico;</li>
       <li>Responda com atenção: apenas uma tentativa por pergunta.</li>
     </ul>
 
