--- a/views/jogo.html
+++ b/views/jogo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />.
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz de Lógica</title>21
+  <title>Quiz de Lógica</title>
   <link rel="stylesheet" href="../styles/jogo.css" />
   <link rel="icon" href="../imagem/favicon.png" />
 </head>
